# rules_wasm

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md  c.bzl  component.bzl  go.bzl  platform-library.bzl  private.bzl  rust.bzl  wasi-patch.bzl  wasi-toolchain-config.bzl  wasm.bzl  wit-package.sh
.bcr/: metadata.template.json
.github/workflows/: release.yaml  tests.yaml
c/: defs.bzl
dev/: BUILD.bazel  checksums-update.sh  dependencies-upgrade.sh  update-checksums.sh  update-dependencies.sh
example/: .gitignore  BUILD.bazel  MODULE.bazel  foo-wrapper.wit  foo.wit  wasm-test.bzl
example/c/: BUILD.bazel  foo-wrapper.c
example/go/: BUILD.bazel  foo-wrapper.go
example/go/dependency/: BUILD.bazel  library-dependency.go
example/rust/: BUILD.bazel  command.rs  foo-wrapper.wit  foo.rs
examples/: BUILD.bazel  foo-wrapper.wit  foo.rs  foo.wit
go/: BUILD.bazel  cm.patch  defs.bzl  tinygo-runner.sh  wit-bindgen-go-runner.sh
rust/: defs.bzl
test/: BUILD.bazel  foo.rs  runner.rs
tests/: BUILD.bazel
wasip2/: BUILD.bazel
wasm/: BUILD.bazel  defs.bzl  wit-package.sh
